--- a/src/assets/components/_cloud-checkbox.scss
+++ b/src/assets/components/_cloud-checkbox.scss
@@ -5,7 +5,7 @@
 		//Block
 		width: auto;
 		margin: 5px 3px;
-		padding: 5px 10px;
+		padding: 5px 14px;
 		background: transparent;
 		display: block;
 		float: left;
